# 3dSlicer_VS_Segmentation

./: .gitignore  CMakeLists.txt  README.md  environment-amd-linux.yml  environment-cpu.yml  environment-directml.yml  environment-macos.yml  environment.yml
SlicerVS/: CMakeLists.txt  SlicerVS.py  SlicerVSTest.py
SlicerVS/Resources/Scripts/: normalize_and_predict.py
SlicerVS/Resources/UI/: SlicerVS.ui
VSSegmentation/: CMakeLists.txt  VSSegmentation.py  VSSegmentationTest.py
VSSegmentation/Resources/Scripts/: normalize_and_predict.py
VSSegmentation/Resources/UI/: VSSegmentation.ui
models/Dataset502_VSmix/nnUNetTrainer__nnUNetPlans__3d_fullres/: dataset.json  dataset_fingerprint.json  plans.json
models/Dataset502_VSmix/nnUNetTrainer__nnUNetPlans__3d_fullres/crossval_results_folds_0_1_2_3_4/: postprocessing.pkl
models/Dataset502_VSmix/nnUNetTrainer__nnUNetPlans__3d_fullres/fold_0/: README.md
scripts/: install_vs_seg.bat  install_vs_seg.ps1
tests/: test_normalize_and_predict.py  test_project_files.py
